# djangotestapp

./: .gitignore  AUTHORS  ChangeLog  Dockerfile-python:2.7  Makefile  README.rst  docker-compose.yml  manage.py  setup-.py  setup.cfg
djangotestapp/: settings.py  tests.py  urls.py  wsgi.py
djangotestapp/fixtures/: dump.json
djangotestapp/tagbrowser/: admin.py  apps.py  factories.py  fields.py  models.py  tests.py
djangotestapp/tagbrowser/management/commands/: factories_tagbrowser.py
djangotestapp/tagbrowser/migrations/: 0001_initial.py
djangotestapp/templates/: base.html
djangotestapp/templates/search/: search.html
djangotestapp/testapp/: admin.py  api.py  models.py  search_indexes.py  search_views.py  tests.py  urls.py  utils.py  views.py
djangotestapp/testapp/migrations/: 0001_initial.py  0002_auto_20160715_0335.py  0003_auto_20160715_0337.py  0004_message_articlebody_html.py  0005_auto_20160717_0429.py  0006_auto_20160717_0509.py  0007_message_user_link.py  0008_users_to_foreignkey.py  0009_auto_20160725_1947.py  0010_drop_orig_user_column.py  0011_rename_user_link_column.py  0012_make_message_user_non-nullable.py
djangotestapp/testapp/templates/search/indexes/testapp/: message_text.txt
djangotestapp/testapp/templates/testapp/: message_detail.html  message_detail_partial.html  message_form.html  message_list.html
requirements/: requirements-all.txt  requirements-deploy.txt  requirements-dev.txt  requirements.txt
