[metadata]
name = djangotestapp
author = Wes Turner
author-email = wes@wrd.nu
summary = A Django web application
description-file = README.rst
home-page = https://github.com/westurner/djangotestapp
license = 
classifier =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Development Status :: 3 - Alpha
    # Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 1.9
    # Framework :: Django :: 1.10
    Natural Language :: English
keywords =
    django
    djangotestapp
[files]
packages =
    djangotestapp
